--- a/index.html
+++ b/index.html
@@ -2,16 +2,22 @@
 <html>
 <head>
 	<meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=0.5, maximum-scale=2.0, user-scalable=yes" />
 	<title>AI</title>
 	<link rel="stylesheet" type="text/css" href="css/index.css">
 </head>
 <body>
     <div id="top">
         <div id="logo">
-            <img src="image/index/logo.png" alt="这里是还没找好的logo" />
+            <img src="image/index/logo.JPG" alt="这里是还没找好的logo" />
         </div>
         <div id="title">
             <h3>电影中的人工智能</h3>
+        </div>
+        <div id="bgm">
+            <audio src="bgm/Alex Da Kid,X Ambassadors,Elle King - Not Easy.mp3" autoplay="autoplay" loop="loop" controls="controls">
+                Your browser does not support the audio tag.
+            </audio>
         </div>
     </div>
 	<section id="knowledge" class="viewBlock">
@@ -26,14 +32,14 @@
 					<span><a href="Marvel.html">《Marvel》</a></span>
 					<span class="pageNumber">1</span>
 				</div>
-				<img src="image/Marvel/logo.png" alt="电影1代表图片"/>
+				<img src="image/Marvel/logo.JPG" alt="电影1代表图片"/>
 			</div>
 			<div class="bookPage runPage">
 				<div class="bookWord">
 					<span><a href="I_Robot.html">《I, Robot》</a></span>
 					<span class="pageNumber">2</span>
 				</div>
-				<img src="image/I,Robot/logo.png" alt="电影2代表图片"/>
+				<img src="image/I,Robot/logo.JPG" alt="电影2代表图片"/>
 			</div>
 			<div class="bookPage runPage">
 				<div class="bookWord">
@@ -51,7 +57,8 @@
 			</div>
 		</div>
 	</section>
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
+    <div id=footer>Copyright@index.B612</div>
+    <script src="js/jquery.min.js"></script>
 	<script type="text/javascript" src="js/index.js"></script>
 </body>
 </html>
